# upbit-metrics-collector

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: .gitkeep  DISABLED.md  build-and-deploy.yml  build-and-push.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py  1767489419_rename_window_minutes_to_seconds.py  3ab9742a6143_add_column_comments.py  b48665197800_remove_liquidity_rank_7d_column.py
docker/: docker-compose.yml
src/: __init__.py
src/application/: __init__.py
src/application/services/: __init__.py  data_cleanup.py  metrics_query.py
src/collectors/: __init__.py  candle_collector.py  main.py  orderbook_collector.py  ticker_collector.py  trade_collector.py
src/config/: __init__.py  env_config.py  logging.py
src/domain/: __init__.py
src/domain/models/: __init__.py
src/domain/services/: __init__.py  orderbook_imbalance_calculator.py  slippage_calculator.py  spread_calculator.py  trade_imbalance_calculator.py  volatility_calculator.py
src/infrastructure/: __init__.py
src/infrastructure/adapters/: __init__.py  candle.py  orderbook.py  ticker.py  trade.py
src/infrastructure/persistence/: __init__.py
src/infrastructure/persistence/database/: __init__.py  session.py
src/infrastructure/persistence/database/models/: __init__.py  metrics_liquidity.py  metrics_slippage.py  (+5 more)
src/infrastructure/persistence/repositories/: __init__.py
src/interfaces/: __init__.py
src/interfaces/api/: __init__.py  agent.py  main.py  metrics.py  symbols.py
src/interfaces/mcp/: __init__.py  server.py
